game logic adjusted

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Hangman!</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+</head>
+<body>
+    <header>Hangman</header>
+    <div class="container">
+        <div id="hangman-words"></div>
+        <div id="guesses">Guesses remaining:</div>
+        <div id="wins">Number of wins: </div>
+        <div id="letters-used"> Letters used: </div>
+        <div id="hangman-category"> Category: Sports</div>
+        <button id="reset">Reset</button>
+</div>
+<script type="text/javascript" src="./assets/javascript/game.js"></script>
+</body>
+</html>
