--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <div id="letters-used"> Letters used: </div>
-        <div id="hangman-category"> Category: Names of sports</div>
+        <div id="hangman-category"> Category is names of sports</div>
         <button id="reset">Play Again!</button>
         </div>
 
