--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div id="letters-used"> Letters used: </div>
         <div id="hangman-category"> Category is names of sports</div>
-        <button id="reset">Play Again!</button>
+        <button id="reset" class="btn btn-outline-warning">Play Again!</button>
         </div>
 
 
