--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
 
     <div class="container">
-        <div id="hangman-words">Your word is here </div>
+        <div id="hangman-words"></div>
         </div>
         <div id="wins-loss-guesses">
         <div id="guesses">Guesses remaining:</div>
@@ -30,8 +30,8 @@
         <div id="letters-used"> Letters used: </div>
         <div id="hangman-category"> Category is names of sports</div>
         <button id="reset" class="btn btn-outline-warning">Play Again!</button>
-        </div>
-
+        
+        <div id="display"><p>Welcome to Hangman! Can you guess the correct word ?</p></div>
 
         <footer class="bg-primary"> <p class="name text-warning">Copyright 2017 @ Randall Ishino</p></footer>
 <script type="text/javascript" src="./assets/javascript/game.js"></script>
