--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="jumbotron jumbotron-fluid bg-primary">
         <div class="container">
-          <h1 class="display-3 text-center text-warning">Hangman</h1>
+          <h1 class="display-3 text-center text-warning" id="header">Hangman</h1>
           <p class="lead text-center text-light"> Press any key to get started!</p>
         </div>
       </div>
